appserver/java-spring/static/app/styles/style.css
/* ... */
.ss-answers-header, .ss-your-answer-header {
  border-bottom: 1px solid #ddd;
  padding-bottom: 10px; }

/* comments */
.ss-question-module-comment {
  border-top: 1px dotted #ddd;
  padding-top: 7px;
  padding-left: 14px;
  padding-right: 0; }
  .ss-question-module-comment p {
    padding-bottom: 3px; }
  .ss-question-module-comment textarea {
    margin-bottom: 14px; }
  .ss-question-module-comment p, .ss-question-module-comment textarea, .ss-question-module-comment textarea.form-control {
    font-size: 12px !important;
    margin-bottom: 10px; }

/* answers */
.ss-answer-wrapper {
  padding-top: 14px; }
  .ss-answer-wrapper .ss-answer-vote {
    padding-top: 6px; }
  .ss-answer-wrapper .ss-answer-inner {
    padding-top: 22px;
    border-bottom: 1px solid #ddd; }
  .ss-answer-wrapper .ss-answer-inner, .ss-answer-wrapper .ss-answer-user-info {
    padding-bottom: 14px; }
  .ss-answer-wrapper hr {
    margin: 0; }

.ss-answer-divider {
  margin-left: 35px;
  margin-right: 35px; }
  .ss-answer-divider hr {
    border-color: #ebebeb;
    margin-top: 15px;
    margin-bottom: 15px; }

/* comments */
.ss-comment {
  border-bottom: dotted 1px #ddd;
  font-size: smaller;
  padding-bottom: 5px;
  margin-bottom: 7px; }

.ss-add-comment div:first-child {
  margin: 8px 0 8px 2px; }
.ss-add-comment textarea {
  margin-bottom: 10px; }

/* used across different views */
.form-group-textarea {
  -webkit-border-bottom-right-radius: 6px;
  -webkit-border-bottom-left-radius: 6px;
  -moz-border-radius-bottomright: 6px;
  -moz-border-radius-bottomleft: 6px;
  border-bottom-right-radius: 6px;
  border-bottom-left-radius: 6px; }

.form-group-textarea {
  border: 1px solid #ccc;
  padding: 20px; }

.ss-dialog header button {
  margin-top: -10px; }
.ss-dialog footer {
  clear: both; }

/* styles for login dialog */
.ss-dialog-all-tags ul {
  list-style: none;
  margin: 0;
  padding: 0; }
  .ss-dialog-all-tags ul .ss-sort-active {
    font-weight: bold; }
  .ss-dialog-all-tags ul .ss-sort {
    float: right;
    position: relative; }
    .ss-dialog-all-tags ul .ss-sort li {
      cursor: pointer;
      margin-left: 10px; }
.ss-dialog-all-tags .ss-column {
  width: 190px; }
.ss-dialog-all-tags .ss-paging {
  clear: both; }
.ss-dialog-all-tags .ss-all-tags-actions {
  display: inline-block;
  padding-right: 20px;
  width: 100%; }
.ss-dialog-all-tags input.ss-typeahead-input {
  font-size: 14px;
  margin-bottom: 5px;
  width: 202px; }
.ss-dialog-all-tags .ss-divider {
  background-color: #000;
  height: 1px;
  margin: 5px 0;
  width: 205px; }

.ss-account-dropdown a {
  color: #fff !important;
  display: block !important;
  font-size: 14px; }
.ss-account-dropdown a span.glyphicon {
  border: 1px solid #9b9b9b;
  padding: 1px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  color: #9b9b9b;
  margin-right: 8px; }
.ss-account-dropdown a span.caret {
  color: #ccc; }
.ss-account-dropdown .dropdown-menu {
  width: 250px;
  padding-top: 0;
  padding-bottom: 0; }
.ss-account-dropdown .ss-account-info {
  padding: 14px 18px 14px 18px; }
.ss-account-dropdown .ss-account-info h4 {
  padding-bottom: 2px;
  color: #000; }
.ss-account-dropdown .ss-account-info p {
  font-size: 12px; }
.ss-account-dropdown .ss-account-actions {
  border-top: 1px solid #ddd;
  padding: 6px 16px 10px;
  padding-bottom: 6px;
  text-align: right;
  margin-bottom: 0 !important; }
.ss-account-dropdown .ss-account-actions a.btn-primary {
  background-color: #428bca;
  border-color: #357ebd;
  display: inline-block !important;
  font-size: 13px;
  padding: 3px 10px; }
.ss-account-dropdown .ss-account-actions a.btn-primary:hover {
  background-color: #428bca;
  border-color: #357ebd; }

.ss-account-dropdown:hover, .ss-account-dropdown.open {
  background: #333; }

.ss-account-dropdown.open a.dropdown-toggle, .ss-account-dropdown a:hover {
  background: #333 !important;
  color: #fff; }

.ss-search-bar {
  /* search */
  /* search tips button */
  /* search tips box */
  /* entire column default */
  /* label default */
  /* sample default */
  /* entire first column */
  /* first label */
  /* first sample */ }
  .ss-search-bar .search-wrapper {
    margin-top: 50px;
    background: #22224f;
    /* Old browsers */
    background: -moz-linear-gradient(left, #22224f 0%, #4668a9 43%, #4668a9 58%, #222350 100%);
    /* FF3.6+ */
    background: -webkit-gradient(linear, left top, right top, color-stop(0%, #22224f), color-stop(43%, #4668a9), color-stop(58%, #4668a9), color-stop(100%, #222350));
    /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(left, #22224f 0%, #4668a9 43%, #4668a9 58%, #222350 100%);
    /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(left, #22224f 0%, #4668a9 43%, #4668a9 58%, #222350 100%);
    /* Opera 11.10+ */
    background: -ms-linear-gradient(left, #22224f 0%, #4668a9 43%, #4668a9 58%, #222350 100%);
    /* IE10+ */
    background: linear-gradient(to right, #22224f 0%, #4668a9 43%, #4668a9 58%, #222350 100%);
    /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#22224f', endColorstr='#222350',GradientType=1 );
    /* IE6-9 */
    padding-top: 30px;
    padding-bottom: 30px;
    padding-left: 20px;
    padding-right: 20px; }
  .ss-search-bar .search-inner .search-input-wrapper {
    float: left;
    width: 70%;
    background: #fff;
    border-radius: 6px;
    margin-left: 32px; }
  .ss-search-bar .search-inner input[type="text"], .ss-search-bar .search-inner input[type="search"] {
    border-radius: 6px;
    -webkit-border-top-right-radius: 0px !important;
    -webkit-border-bottom-right-radius: 0px !important;
    -moz-border-radius-topright: 0px !important;
    -moz-border-radius-bottomright: 0px !important;
    border-top-right-radius: 0px !important;
    border-bottom-right-radius: 0px !important;
    border: none;
    width: 80%;
    float: left; }
/* ... */

